Updated ProdDetails and SQL
v0.2

--- a/frontend/html/ProdInf.html
+++ b/frontend/html/ProdInf.html
@@ -16,12 +16,15 @@
           <div class="main-info">
             <div class="images">
               <div class="product-images">
-                <img class="image-65" src="/frontend/img/image 65.png" /><img
+                <img class="image-65" id="product-main-img-back" src="/frontend/img/image 65.png" />
+
+                <img
+                id="product-main-img-top"
                   class="image-67"
                   src="/frontend/img/image 67.png"
                 /><img class="image-68" src="/frontend/img/image 68.png" />
                 <img
-                  class="image-66" id="product-main-img-top"
+                  class="image-66" id="product-main-img-top2"
                   src="/frontend/img/image 66.png"
                 />
               </div>
