Added proper filtering

--- a/frontend/html/ProdInf.html
+++ b/frontend/html/ProdInf.html
@@ -16,39 +16,29 @@
           <div class="main-info">
             <div class="images">
               <div class="product-images">
-                <img class="image-65" id="product-main-img-back" src="/frontend/img/image 65.png" />
-
+                <img class="image-65" id="product-main-img-back" src="" />
                 <img
                 id="product-main-img-top"
                   class="image-67"
-                  src="/frontend/img/image 67.png"
-                /><img class="image-68" src="/frontend/img/image 68.png" />
+                  src=""
+                />
                 <img
                   class="image-66" id="product-main-img-top2"
-                  src="/frontend/img/image 66.png"
+                  src=""
                 />
               </div>
-              <img class="image-64" src="/frontend/img/image 64.png" id="product-main-img" />
+              <img class="image-64" src="" id="product-main-img" />
             </div>
             <div class="info">
               <div class="content">
                 <div class="title">
-                  <div class="new-balance-2002-rd" id="product-name">New Balance 2002RD</div>
+                  <div class="new-balance-2002-rd" id="product-name"></div>
                   <div class="frame-427319310"></div>
                   <div class="price">
-                    <div class="_1399" id="product-price">$139</div>
+                    <div class="_1399" id="product-price"></div>
                     <!-- <div class="_1499">$1499</div> -->
                   </div>
-                  <div class="colors">
-                    <div class="select-color">Select color :</div>
-                    <div class="frame-427319309">
-                      <div class="ellipse-12"></div>
-                      <div class="ellipse-13"></div>
-                      <div class="ellipse-15"></div>
-                      <div class="ellipse-16"></div>
-                      <div class="ellipse-14"></div>
-                    </div>
-                  </div>
+               
                   <div class="tabs-memory">
                     <div class="tab">
                       <div class="_256-gb">7</div>
