Added Proper HREF
v0.3

--- a/backend/test.html
+++ b/backend/test.html
@@ -9,7 +9,7 @@
         <input type="file" id="image">
         <button onclick="uploadImage()">Submit</button>
 
-        <script src="/api_client.js"></script>
-        <script src="/file_reader.js"></script>
+        <script src="api_client.js"></script>
+        <script src="file_reader.js"></script>
     </body>
 </html>
