Added API For add to cart and delete item
v0.6

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -51,7 +51,7 @@
   
           <div class="kicks">Kicks</div>
         </div></a>
-        <div class="category-card2">
+        <a href="/frontend/html/essentialsPage.html"><div class="category-card2">
           <svg
             class="t-shirt"
             width="33"
@@ -79,8 +79,8 @@
           </svg>
   
           <div class="shirts">Essentials</div>
-        </div>
-        <div class="category-card3">
+        </div></a>
+        <a href="/frontend/html/apparelsPage.html"><div class="category-card3">
           <svg
             class="vector3"
             width="28"
@@ -96,8 +96,8 @@
           </svg>
   
           <div class="jackets-hoodies">Apparels</div>
-        </div>
-        <div class="category-card4">
+        </div></a>
+        <a href="#new-arrivals"><div class="category-card4">
           <svg
             class="pants"
             width="33"
@@ -111,43 +111,9 @@
               fill="black"
             />
           </svg>
-          <!-- remove bottoms -->
-          <!-- <div class="bottoms">Bottoms</div>
-        </div>
-        <div class="category-card5">
-          <svg
-            class="square-half-bottom"
-            width="32"
-            height="32"
-            viewBox="0 0 32 32"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M25 5.00037H7C6.46957 5.00037 5.96086 5.21108 5.58579 5.58615C5.21071 5.96123 5 6.46993 5 7.00037V25.0004C5 25.5308 5.21071 26.0395 5.58579 26.4146C5.96086 26.7897 6.46957 27.0004 7 27.0004H25C25.5304 27.0004 26.0391 26.7897 26.4142 26.4146C26.7893 26.0395 27 25.5308 27 25.0004V7.00037C27 6.46993 26.7893 5.96123 26.4142 5.58615C26.0391 5.21108 25.5304 5.00037 25 5.00037ZM25 7.00037V15.0004H7V7.00037H25ZM13 17.0004V25.0004H11V17.0004H13ZM15 17.0004H17V25.0004H15V17.0004ZM19 17.0004H21V25.0004H19V17.0004ZM7 17.0004H9V25.0004H7V17.0004ZM25 25.0004H23V17.0004H25V25.0004Z"
-              fill="black"
-            />
-          </svg> -->
-          <!-- remove kits
-          <div class="kitss">Kits</div>
-        </div>
-        <div class="category-card6">
-          <svg
-            class="vector6"
-            width="26"
-            height="26"
-            viewBox="0 0 26 26"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M25.7076 12.2933L13.7076 0.293287C13.6147 0.20031 13.5044 0.126551 13.383 0.0762268C13.2616 0.0259025 13.1315 0 13.0001 0C12.8686 0 12.7385 0.0259025 12.6171 0.0762268C12.4957 0.126551 12.3854 0.20031 12.2926 0.293287L0.292555 12.2933C0.152544 12.4331 0.0571762 12.6114 0.0185258 12.8055C-0.0201245 12.9996 -0.000319928 13.2008 0.0754325 13.3836C0.151185 13.5664 0.279479 13.7226 0.444073 13.8325C0.608667 13.9424 0.802159 14.0009 1.00006 14.0008H6.00006V24.0008C6.00006 24.5312 6.21077 25.0399 6.58584 25.415C6.96092 25.7901 7.46962 26.0008 8.00006 26.0008H18.0001C18.5305 26.0008 19.0392 25.7901 19.4143 25.415C19.7893 25.0399 20.0001 24.5312 20.0001 24.0008V14.0008H25.0001C25.198 14.0009 25.3914 13.9424 25.556 13.8325C25.7206 13.7226 25.8489 13.5664 25.9247 13.3836C26.0004 13.2008 26.0202 12.9996 25.9816 12.8055C25.9429 12.6114 25.8476 12.4331 25.7076 12.2933ZM19.0001 12.0008C18.7348 12.0008 18.4805 12.1061 18.2929 12.2937C18.1054 12.4812 18.0001 12.7356 18.0001 13.0008V24.0008H8.00006V13.0008C8.00006 12.7356 7.8947 12.4812 7.70716 12.2937C7.51963 12.1061 7.26527 12.0008 7.00006 12.0008H3.41381L13.0001 2.41454L22.5863 12.0008H19.0001Z"
-              fill="black"
-            />
-          </svg> -->
-  
+
           <div class="latest">Latest</div>
-        </div>
+        </div></a>
       </div>
       <div class="arrow-fat-up"></div>
     </div>
@@ -194,9 +160,9 @@
               craftsmanship.
             </div>
           </div>
-        <a href="/frontend/html/ProdInf.html">  <div class="button">
+        <!-- <a href="/frontend/html/ProdInf.html">  <div class="button">
             <div class="label">View</div>
-          </div></a>
+          </div></a> -->
         </div>
       </div>
     </div>
