--- a/frontend/html/ProdPage.html
+++ b/frontend/html/ProdPage.html
@@ -480,8 +480,11 @@
           <div class="header-top">
             <a href="/frontend/html/home.html"> <img class="add-a-heading-1-1" src="/frontend/img/Add a heading (1) 1.png" /></a>
 
-            <input type="text" name="text" placeholder="Search BSG'" class="input">
-        <input type="text" name="text" placeholder="Your Order ID (#)'" class="input2">
+            <form id="searchForm" action="searchPage.html">
+              <input type="text" name="searchProduct" placeholder="Search BSG" class="input">
+            </form>
+            
+            <input type="text" name="text" placeholder="Your Order ID (#)'" class="input2">
 
             <div class="navigation">
               <a href="/frontend/html/home.html"><div class="home">Home</div></a>
