--- a/frontend/html/essentialsPage.html
+++ b/frontend/html/essentialsPage.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+  <div id="cartIdContainer" name = "cartId" value =""></div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const cartIdContainer = document.getElementById('cartIdContainer');
+      const cartId = sessionStorage.getItem('cartId');
+
+      if (cartId) {
+        cartIdContainer.setAttribute('value',cartId);
+      }
+    });
+  </script>
     <div class="product-page">
         <div class="hero">
           <div class="navbar"></div>
