added search product name

--- a/frontend/frontend/html/home.html
+++ b/frontend/frontend/html/home.html
@@ -237,7 +237,7 @@
     <div class="header">
       <div class="header-top">
         <a href="/frontend/html/home.html"> <img class="add-a-heading-1-1" src="/frontend/img/Add a heading (1) 1.png" /></a>
-        <input type="text" name="text" placeholder="Search BSG'" class="input">
+        <input type="text" name="text" placeholder="Search BSG'" class="input" onkeydown="searchProduct(this)">
         <input type="text" name="text" placeholder="Your Order ID (#)'" class="input2">
        
         <div class="navigation">
@@ -675,7 +675,7 @@
       loader.remove();
     });
   </script> -->
-  
+  <script src="../../js/product.js"></script>
   
 
 </body>
