--- a/frontend/html/ProdInf.html
+++ b/frontend/html/ProdInf.html
@@ -96,10 +96,11 @@
                 </div>
               </div>
               <div class="buttons">
-                <div class="button">
+                <div class="button" id="addToCartButton">
                   <div class="label">Add to Cart</div>
                 </div>
               </div>
+              <script src = "../js/cart.js"></script>
               <div class="icons">
                 <div class="feature">
                   <div class="icon-56-px-delivery">
