--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="../css/home.css">
-  
 </head>
 
 <body>
@@ -215,11 +214,11 @@
           
           <a href="/frontend/html/home.html"><div class="home2">Home</div></a>
           <a href="/frontend/html/about.html"><div class="about">About</div></a>
-          <div class="contact-us">
+          <a href="/frontend/html/socials.html"><div class="contact-us">
             <!--kevs--><span
               ><span class="contact-us-span">Contact Us</span 
               ></span><!--kevs-->
-          </div>
+          </div></a>
         </div>
         <a href="/frontend/html/cart.html"><div class="icon-32-px-cart">
         <script src="/frontend/js/util.js"></script>
