--- a/frontend/html/landing.html
+++ b/frontend/html/landing.html
@@ -22,7 +22,7 @@
     <div class="landing">
         <div class="hero">
           <div class="navbar">
-            <input type="text" name="text" placeholder="Search BSG'" class="input" onkeydown="search(this)">
+            <input type="text" name="text" placeholder="Search BSG'" class="input">
         <input type="text" name="text" placeholder="Your Order ID (#)'" class="input2">
             <div class="nav-items">
               <div class="links">
@@ -40,7 +40,7 @@
                 </div>
               </div>
               <div class="button">
-                <div class="socials">SOCIALS</div>
+                <a href="/frontend/html/socials.html"><div class="socials">SOCIALS</div></a>
               </div>
             </div>
           </div>
