--- a/frontend/html/cart.html
+++ b/frontend/html/cart.html
@@ -19,6 +19,9 @@
       }
     });
   </script>
+  <script src="../js/checkout.js"></script>
+  <script src="../js/api_client.js"></script>
+
     <div class="cart">
         <div class="hero">
           <div class="content">
