show only available sizes for each product

--- a/frontend/html/ProdInf.html
+++ b/frontend/html/ProdInf.html
@@ -54,7 +54,7 @@
                   
                 
 
-                  <div class="tabs-memory">
+                  <div class="tabs-memory" id="shoe-sizes-tab">
                     <div class="tab">
                       <label>
                         <input type="radio" name="memory" value="7GB">
