--- a/frontend/html/ProdInf.html
+++ b/frontend/html/ProdInf.html
@@ -441,6 +441,7 @@
         </div>
       </div>
       <script src="../js/api_client.js"></script>
+      <!-- <script src="../js/cart.js"></script> -->
       <script src="../js/viewproductdetails.js"></script>
       <script>
           initializeProdDetails()
