Added Delete Product From Cart
v0.7

--- a/frontend/html/confirm.html
+++ b/frontend/html/confirm.html
@@ -31,15 +31,10 @@
                   <a href="/frontend/html/about.html"><div class="about">About</div></a>
                 </div>
                 <div class="link-item">
-                  <div class="contact">Contact</div>
+                  <a href="/frontend/html/socials.html"> <div class="contact">Contact</div></a>
                 </div>
-                <!-- <div class="link-item">
-                  <div class="pricing">Pricing</div>
-                </div> -->
               </div>
-              <div class="button">
-                <div class="socials">SOCIALS</div>
-              </div>
+             
             </div>
           </div>
           <div class="frame-11">
