--- a/frontend/html/essentialsPage.html
+++ b/frontend/html/essentialsPage.html
@@ -270,18 +270,17 @@
         <div class="header">
           <div class="header-top">
             <a href="/frontend/html/home.html"> <img class="add-a-heading-1-1" src="/frontend/img/Add a heading (1) 1.png" /></a>
-
-            <input type="text" name="text" placeholder="Search BSG'" class="input">
-        <input type="text" name="text" placeholder="Your Order ID (#)'" class="input2">
+            <input type="text" name="text" placeholder="Search BSG'" class="input" onkeydown="searchProduct(this)">
+            <input type="text" name="text" placeholder="Your Order ID (#)'" class="input2">
 
             <div class="navigation">
               <a href="/frontend/html/home.html"><div class="home">Home</div></a>
               <a href="/frontend/html/about.html"><div class="about">About</div></a>
-              <div class="contact-us">
-               <span
-                  ><span class="contact-us-span">Contact Us</span
-                  ></span>
-              </div>
+              <a href="/frontend/html/socials.html"><div class="contact-us">
+                <span
+                    ><span class="contact-us-span">Contact Us</span 
+                    ></span>
+                </div></a>
             </div>
     
             <a href="/frontend/html/cart.html"><div class="icon-32-px-cart">
