--- a/frontend/html/about.html
+++ b/frontend/html/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ABOUT BSG</title>
     <link rel="stylesheet" href="../css/about.css">
 </head>
 <body>
@@ -54,15 +54,11 @@
                 <a href="/frontend/html/about.html"><div class="about2">About</div></a>
               </div>
               <div class="link-item">
-                <div class="contact">Contact</div>
+                <a href="/frontend/html/socials.html"><div class="contact">Contact</div><a>
               </div>
-              <!-- <div class="link-item">
-                <div class="pricing">Pricing</div>
-              </div> -->
+             
             </div>
-            <div class="button">
-              <div class="socials">SOCIALS</div>
-            </div>
+            
           </div>
         </div>
         <a href="/frontend/html/home.html"> <img class="add-a-heading-1-1" src="/frontend/img/Add a heading (1) 1.png" /></a>
