Finish Minor errors
v0.9

--- a/frontend/html/ProdInf.html
+++ b/frontend/html/ProdInf.html
@@ -215,8 +215,13 @@
         <div class="header2">
           <div class="header-top">
             <a href="/frontend/html/home.html"> <img class="add-a-heading-1-1" src="/frontend/img/Add a heading (1) 1.png" /></a>
-            <input type="text" name="text" placeholder="Search BSG'" class="input">
-            <input type="text" name="text" placeholder="Your Order ID (#)'" class="input2">
+            <script src="../js/api_client.js"></script>
+            <script src="../js/util.js"></script>
+            <script src="../js/newarrivals.js"></script>
+            <script src="../js/product.js"></script>
+            <script src="../js/confirm_order.js"></script>
+            <input type="text" name="text" placeholder="Search BSG'" class="input" onkeydown="searchProduct(this)">
+            <input type="text" name="text" placeholder="Your Order ID (#)'" class="input2" onkeydown="searchOrderNum(this)">
 
             <div class="navigation"><!--kevs-->
               <a href="/frontend/html/home.html"><div class="home2">Home</div></a>
